[package]
name = "glam-linalg"
version = "0.0.0"
edition = "2021"
description = "An extension to the glam library providing linear algebra methods"
repository = "https://github.com/squaaawk/glam-linalg"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
glam = "0.29.2"

[dev-dependencies]
fastrand = { version = "2.3.0", default-features = false }
approx = { version = "0.5.1", default-features = false }
paste = "1.0.15"
